Start on migration to java 17 and remove applet