@@ -2,12 +2,13 @@ package com.darkan;
 
 import javax.imageio.ImageIO;
 import javax.swing.*;
-import java.applet.Applet;
 import java.awt.*;
 import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 
 public class Loader {
 
@@ -30,7 +31,7 @@ public class Loader {
 	}
 
 	private static JFrame frame;
-	private static Applet applet;
+	private static Panel clientPanel;
 
 	private static final Dimension FIXED_SIZE = new Dimension(774, 588);
 	public static String CLIENT_PATH = System.getProperty("user.home") + File.separator + ".darkanrs";
@@ -95,7 +96,7 @@ public class Loader {
 
 	public static void promptServer() throws Exception {
 		Class<?> clazz = new RSPSLoader().getClass("com.Loader");
-		applet = (Applet) clazz.newInstance();
+		clientPanel = (Panel) clazz.getConstructor().newInstance();
 
 		ClientPanel serverSelect = new ClientPanel(BACKGROUND, LOGO);
 		serverSelect.setLayout(null);
@@ -134,7 +135,7 @@ public class Loader {
 				lobbyIpField.set(null, lobbyBox.getItemAt(lobbyBox.getSelectedIndex()).ip);
 				frame.remove(serverSelect);
 				frame.setResizable(true);
-				initApplet();
+				startClient(clazz);
 			} catch (Exception e) {
 				e.printStackTrace();
 			}
@@ -145,11 +146,13 @@ public class Loader {
 		frame.pack();
 	}
 
-	public static void initApplet() {
-		frame.add(applet, BorderLayout.CENTER);
-		applet.init();
-		applet.setPreferredSize(FIXED_SIZE);
-		applet.setVisible(true);
+	public static void startClient(Class<?> loader) throws NoSuchMethodException, SecurityException, IllegalAccessException, IllegalArgumentException, InvocationTargetException {
+		frame.add(clientPanel, BorderLayout.CENTER);
+		Method init = loader.getMethod("startClient");
+		init.setAccessible(true);
+		init.invoke(clientPanel);
+		clientPanel.setPreferredSize(FIXED_SIZE);
+		clientPanel.setVisible(true);
 		frame.pack();
 	}
 
